prevented vertical scrollbar on main page

--- a/www/styles/index.scss
+++ b/www/styles/index.scss
@@ -3,6 +3,7 @@
 
 body {
   background: #a9a9a9;
+  overflow-y: hidden;
 }
 
 .content {
